--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,14 @@
-# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
-
 language: R
 sudo: false
 cache: packages
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
+
+matrix:
+  include:
+  - r: release
+  - r: oldrel
+  - r: devel
