--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(check_protect)
 export(deidentify)
 export(dua_write)
+export(make_template)
 export(see_dua_level)
 export(see_dua_options)
 export(set_dua)
