--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,4 +20,7 @@ Imports: haven,
     readxl,
     digest
 RoxygenNote: 6.0.1
-Suggests: testthat
+Suggests: testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
