removed rmdformats since switched away from that for vignette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,5 @@ Imports: haven,
 RoxygenNote: 6.0.1
 Suggests: testthat,
     knitr,
-    rmarkdown,
-    rmdformats
+    rmarkdown
 VignetteBuilder: knitr
