new document site and better documentation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,11 +5,13 @@ Authors@R: person("Benjamin", "Skinner",
 	          email = "btskinner@virginia.edu",
 		  role = c("aut", "cre"),
 		  comment = c(ORCID = "0000-0002-0337-7415"))
-Description: A set of functions to help users create shareable data sets from
-	     raw data files that contain protected elements. Relying on master
-	     crosswalk files that list restricted variables, package functions
-	     warn users about possible violations of data usage agreement and
-	     prevent writing protected elements.    
+URL: https://github.com/btskinner/duawranglr	
+BugReports: https://github.com/btskinner/duawranglr/issues
+Description: Create shareable data sets from raw data files that
+	     contain protected elements. Relying on master crosswalk
+	     files that list restricted variables, package functions
+	     warn users about possible violations of data usage
+	     agreement and prevent writing protected elements.
 Depends: R (>= 3.1.2)
 License: MIT + file LICENSE
 Encoding: UTF-8
