update to v0.6.6 to remove SAS tests

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,8 +1,8 @@
-url: https://www.btskinner.me/duawranglr/
+url: https://www.btskinner.io/duawranglr/
 
 authors:
   Benjamin Skinner:
-    href: https://www.btskinner.me
+    href: https://www.btskinner.io
 
 reference:
   - title: I/O
