--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,10 +1,11 @@
-pandoc: 2.7.3
-pkgdown: 1.4.1
+pandoc: '2.13'
+pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
   duawranglr: duawranglr.html
   securing_data: securing_data.html
+last_built: 2021-04-14T13:33Z
 urls:
-  reference: https://www.btskinner.me/duawranglr//reference
-  article: https://www.btskinner.me/duawranglr//articles
+  reference: https://www.btskinner.io/duawranglr//reference
+  article: https://www.btskinner.io/duawranglr//articles
 
